--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <a href="./nav.html">nav</a>
             <a href="./modal.html">modal</a>
             <a href="./typography.html">typography</a>
-            <a href="./list.html
-            ">list</a>
+            <a href="./list.html">list</a>
+            <a href="./select.html">select</a>
         </div>
     </aside>
     <div class="main">
