--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav class="navbar">
         <div>
-            <input type="text" placeholder="search">
+            <input class='inputs' type="text" placeholder="search">
         </div>
         <div class="heading">
             <h1>CSS  <span>only</span></h1> 
@@ -29,6 +29,7 @@
             <a href="./typography.html">typography</a>
             <a href="./list.html">list</a>
             <a href="./select.html">select</a>
+            <a href="./badge.html">badge</a>
         </div>
     </aside>
     <div class="main">
