--- a/modal.html
+++ b/modal.html
@@ -21,10 +21,9 @@
       </div>
 
      <div class="box1">
-    <i class="ri-checkbox-circle-line"><span>You want to save this item?</span> </i>
-    <button class="btn1">Yes</button>
-        <button class="btn4">No</button>
-          </div>
+    <h3 class="modal">Server-side modal</h3>
+      <p>If you disable JavaScript, you will still see me.</p>
+    </div>
     </div>
    </div>
 </body>
