--- a/nav.html
+++ b/nav.html
@@ -14,7 +14,7 @@
         <div class="containers">
             <nav class="navbars">
                 <div>
-                    <input type="text" placeholder="search">
+                    <input class="inputs" type="text" placeholder="search">
                 </div>
                 <div class="heading">
                     <h1>CSS  <span>only</span></h1> 
@@ -24,7 +24,7 @@
         </nav>
         <nav class="nav">
             <div>
-                <input type="text" placeholder="search">
+                <input class="inputs" type="text" placeholder="search">
             </div>
             <div class="heading">
                 <h1>CSS  <span>only</span></h1> 
@@ -34,7 +34,7 @@
     </nav>
     <nav class="navs">
         <div>
-            <input type="text" placeholder="search">
+            <input class="inputs" type="text" placeholder="search">
         </div>
         <div class="heading">
             <h1>CSS  <span>only</span></h1> 
@@ -44,7 +44,7 @@
 </nav>
 <nav class="navbarss">
     <div>
-        <input type="text" placeholder="search">
+        <input class="inputs" type="text" placeholder="search">
     </div>
     <div class="heading">
         <h1>CSS  <span>only</span></h1> 
