--- a/select.html
+++ b/select.html
@@ -10,18 +10,33 @@
 <body>
     <div class="mains">
         <h1 class="fheadings">Select</h1>
-        <div class="containers">
-            
-           <div class="box-wrap">
-                <labe for="year">Year</labe>
+        <div class="container">
+            <div class="box boxs">
+                <label>Year</label>
                 <select>
-                    <option value="10">10</option>
-                    <option value="20">20</option>
-                    <option value="30">30</option>
-                    <option value="40">40</option>
+                    <option value="10"></option>
+                    <option value="10">18</option>
+                    <option value="10">20</option>
+                    <option value="10">25</option>
                 </select>
-            
+
+            <div class="select-form">
+                <div class="forms">
+                    <label>male</label>
+                    <input type="radio" name="size" id="form">
+                </div>
+
+                <div class="forms">
+                    <label>female</label>
+                    <input type="radio" name="size" id="form">
+                </div>
+
+                <div class="forms">
+                    <label>other</label>
+                    <input type="radio" name="size" id="form">
+                </div>
             </div>
+        </div>
         </div>
     </div>
 </body>
