--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <a href="./list.html">list</a>
             <a href="./select.html">select</a>
             <a href="./badge.html">badge</a>
+            <a href="./divider.html">divider</a>
         </div>
     </aside>
     <div class="main">
