--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <a href="./select.html">select</a>
             <a href="./badge.html">badge</a>
             <a href="./divider.html">divider</a>
+            <a href="./appbar.html">app baar</a>
         </div>
     </aside>
     <div class="main">
