--- a/card.html
+++ b/card.html
@@ -9,8 +9,33 @@
 </head>
 
 <body>
-<div class="mains">
-    <h1 class="fheadings">Card</h1>
+    <aside class="sidebar">
+
+        <nav class="navbar">
+            <div>
+                <input class='inputs' type="text" placeholder="search">
+            </div>
+            <div class="heading">
+                <h1>CSS  <span>only</span></h1> 
+            </div>
+        </nav>
+            <div class="list">
+                <a href="./button.html">button</a>
+                <a href="./avtar.html">Avtar</a>
+                <a href="./card.html">card</a>
+                <a href="./alert.html">Alert</a>
+                <a href="./nav.html">nav</a>
+                <a href="./modal.html">modal</a>
+                <a href="./typography.html">typography</a>
+                <a href="./list.html">list</a>
+                <a href="./select.html">select</a>
+                <a href="./badge.html">badge</a>
+                <a href="./divider.html">divider</a>
+                <a href="./appbar.html">app baar</a>
+            </div>
+        </aside>
+<div class="main">
+    <h1 class="fheading">Card</h1>
 <div class="container">
     <div class="box">
             <img src="https://rukminim1.flixcart.com/image/495/594/l0jwbrk0/top/s/q/f/s-tttp006210-tokyo-talkies-original-imagcb3v8khrrdvk.jpeg?q=50" class="image">
