--- a/divider.html
+++ b/divider.html
@@ -9,8 +9,33 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
-<div class="mains">
-        <h1 class="fheadings">Divider</h1>
+   <aside class="sidebar">
+
+      <nav class="navbar">
+          <div>
+              <input class='inputs' type="text" placeholder="search">
+          </div>
+          <div class="heading">
+              <h1>CSS  <span>only</span></h1> 
+          </div>
+      </nav>
+          <div class="list">
+              <a href="./button.html">button</a>
+              <a href="./avtar.html">Avtar</a>
+              <a href="./card.html">card</a>
+              <a href="./alert.html">Alert</a>
+              <a href="./nav.html">nav</a>
+              <a href="./modal.html">modal</a>
+              <a href="./typography.html">typography</a>
+              <a href="./list.html">list</a>
+              <a href="./select.html">select</a>
+              <a href="./badge.html">badge</a>
+              <a href="./divider.html">divider</a>
+              <a href="./appbar.html">app baar</a>
+          </div>
+      </aside>
+<div class="main">
+        <h1 class="fheading">Divider</h1>
    <div class="container">
       <div class="box">
         <i class="ri-image-2-fill deco"><span>Photos</span></i>
